--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>Date Picker Demo</title>
-		<link rel="stylesheet" href="dist/daterangepicker.min.css" />
-		<script src="https://code.jquery.com/jquery-1.12.2.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js" type="text/javascript"></script>
-		<script src="dist/jquery.daterangepicker.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://bootswatch.com/slate/bootstrap.min.css">
+		<link rel="stylesheet" href="src/daterangepicker.slate.css" />
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment.min.js" type="text/javascript"></script>
+		<script src="src/jquery.daterangepicker.js"></script>
 		<script src="demo.js"></script>
 		<style type="text/css">
 		#wrapper
 		{
 			width:800px;
 			margin:0 auto;
-			color:#333;
             font-family:Tahoma,Verdana,sans-serif;
 			line-height:1.5;
 			font-size:14px;
@@ -402,6 +402,8 @@
 		var valid = !(t.getDay() == 0 || t.getDay() == 6);  //disable saturday and sunday
 		var _class = '';
 		var _tooltip = valid ? '' : 'weekends are disabled';
+		// Allow span across disabled dates in later half of month (start/end at those dates is not allowed)
+		valid = valid || (t.getDate()>15? null : valid);
 		return [valid,_class,_tooltip];
 	}
 }				</pre>
