--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>Date Picker Demo</title>
-		<link rel="stylesheet" href="src/daterangepicker.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="https://bootswatch.com/slate/bootstrap.min.css">
-		<link rel="stylesheet" href="src/daterangepicker.slate.delta.css" />
+		<link rel="stylesheet" type="text/css" href="src/daterangepicker.css" />
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment.min.js" type="text/javascript"></script>
 		<script src="src/jquery.daterangepicker.js"></script>
@@ -21,11 +19,12 @@
 			line-height:1.5;
 			font-size:14px;
 		}
-		.demo { margin:30px 0;}
+		.demo { margin:30px 0; }
 		.date-picker-wrapper .month-wrapper table .day.lalala { background-color:orange; }
 		.options { display:none; border-left:6px solid #8ae; padding:10px; font-size:12px; line-height:1.4; background-color:#eee; border-radius:4px;}
 		.date-picker-wrapper.date-range-picker19 .day.first-date-selected { background-color: red !important; }
 		.date-picker-wrapper.date-range-picker19 .day.last-date-selected { background-color: orange !important; }
+		button { color: black !important; }
 		</style>
 	</head>
 	<body>
@@ -69,13 +68,18 @@
             <h2 id="demonstrations">Demonstrations</h2>
 
 			<div class="demo">
+				<button id="add-slate">Use Slate Color Theme</button>
+				<button id="remove-slate">Remove Slate Color Theme</button>
+			</div>
+			
+			<div class="demo">
 				Default settings: <input id="date-range0" size="40" value="">
 				<a href="#" class="show-option">Show Config</a>
 				<pre class="options">
 {}</pre>
 			</div>
 
-			<div>
+			<div class="demo">
 				Default settings with time enabled: <input id="date-range1" size="60" value="">
 				<a href="#" class="show-option">Show Config</a>
 				<pre class="options">
@@ -412,7 +416,7 @@
 			</div>
 
 			<div class="demo">
-				Control by script:
+				Control by script:<br>
 				<button id="date-range16-open">Open</button>
 				<button id="date-range16-close">Close</button>
 				<button id="date-range16-set">Set Date Range</button>
