--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
 			font-size:14px;
 		}
 		.demo { margin:30px 0; }
-		.options { display:none; border-left:6px solid #8ae; padding:10px; font-size:12px; line-height:1.4; background-color:#eee; border-radius:4px;}
+		.options
+		{
+			display:none;
+			border-left:6px solid #8ae;
+			padding:10px;
+			font-size:12px;
+			line-height:1.4;
+			background-color:#eee;
+			border-radius:4px;
+		}
 		.date-picker-wrapper.date-range-picker19 .day.first-date-selected { background-color: red !important; }
 		.date-picker-wrapper.date-range-picker19 .day.last-date-selected { background-color: orange !important; }
 		button { color: black !important; }
@@ -36,7 +45,9 @@
 				jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.
 			</p>
 			<p>
-				Requires <a href="http://jquery.com/" target=_blank>jQuery</a> 1.4.2+ (MIT LICENSE), <a href="http://momentjs.com/" target=_blank>Moment</a> 2.8.1+ (MIT LICENSE)
+				Requires
+				<a href="http://jquery.com/" target=_blank>jQuery</a> 1.4.2+ (MIT LICENSE),
+				<a href="http://momentjs.com/" target=_blank>Moment</a> 2.8.1+ (MIT LICENSE)
 			</p>
 			<p>
 				Compatible Browsers:
@@ -44,7 +55,6 @@
 					<li>Google Chrome 30+
 					<li>Mozilla Firefox 30+
 					<li>Microsoft Edge
-					<li>Microsoft Internet Explorer 9+
 					<li>Microsoft Internet Explorer 9+
 					<li>Opera 20+
 					<li>Safari 4+
@@ -193,7 +203,10 @@
 </pre>
 			</div>
 			<div class="demo">
-				Use SPAN instead of INPUT: <span id="date-range9" style="background-color:#49e; color:white;padding:3px; cursor:pointer; border-radius:4px;">select</span>
+				Use SPAN instead of INPUT:
+				<span id="date-range9" style="background-color:#49e; color:white;padding:3px; cursor:pointer; border-radius:4px;">
+					select
+				</span>
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
@@ -209,7 +222,10 @@
 </pre>
 			</div>
 			<div class="demo">
-				Use two inputs: <span id="two-inputs"><input id="date-range200" size="20" value=""> to <input id="date-range201" size="20" value=""></span>
+				Use two inputs:
+				<span id="two-inputs"><input id="date-range200" size="20" value="">
+				to
+				<input id="date-range201" size="20" value=""></span>
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
@@ -262,8 +278,6 @@
 	{
 		'prev-days': [3,5,7],
 		'prev': ['week','month','year'],
-		'next-days':null,
-		'next':null
 	}
 }				
 </pre>
@@ -289,7 +303,8 @@
 				return [start,end];
 			}
 		},
-		//if only return an array of one date, it will display the month which containing the date. and it will not select any date range
+		//if only return an array of one date, it will display the month which containing the date.
+		//will not select any date range
 		{
 			name: 'Oct 2014',
 			dates : function()
@@ -352,14 +367,14 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	autoClose: true,
+	autoClose: false,
 	singleDate : true,
 	showShortcuts: false
 }				
 </pre>
 			</div>
 			<div class="demo">
-				Single Date mode with single month: <input id="date-range13-2" size="40" value="2015-03-01">
+				Single Date mode with single month, auto-close: <input id="date-range13-2" size="40" value="2015-03-01">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
