--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 			<p>
             <h2 id="installation">Installation</h2>
 <pre>
-&lt;link rel="stylesheet" href="dist/daterangepicker.min.css"&gt;
-&lt;!-- Optional "Slate" color theme --&gt;
-&lt;link rel="stylesheet" href="dist/daterangepicker.slate.delta.min.css"&gt;
-&lt;script type="text/javascript" src="moment.min.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="jquery.min.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="dist/jquery.daterangepicker.min.js"&gt;&lt;/script&gt;
+&lt;link rel="stylesheet" href="dist/daterangepicker.min.css">
+&lt;!-- Optional "Slate" color theme -->
+&lt;link rel="stylesheet" href="dist/daterangepicker.slate.delta.min.css">
+&lt;script type="text/javascript" src="moment.min.js">&lt;/script>
+&lt;script type="text/javascript" src="jquery.min.js">&lt;/script>
+&lt;script type="text/javascript" src="dist/jquery.daterangepicker.min.js">&lt;/script>
 </pre>
             <h2 id="demonstrations">Demonstrations</h2>
 			<div class="demo">
@@ -93,12 +93,12 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startOfWeek: 'monday',
+	startOfWeek : 'monday',
 	separator : ' ~ ',
-	format: 'DD.MM.YYYY HH:mm',
-	autoClose: false,
+	format : 'DD.MM.YYYY HH:mm',
+	autoClose : false,
 	time: {
-		enabled: true
+		enabled : true
 	}
 }
 </pre>
@@ -108,15 +108,15 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startOfWeek: 'monday',
+	startOfWeek : 'monday',
 	separator : ' ~ ',
-	format: 'DD.MM.YYYY HH:mm',
-	autoClose: false,
-	time: {
-		enabled: true
+	format : 'DD.MM.YYYY HH:mm',
+	autoClose : false,
+	time : {
+		enabled : true
 	},
-	defaultTime: moment().startOf('day').toDate(),
-	defaultEndTime: moment().endOf('day').toDate()
+	defaultTime : moment().startOf('day').toDate(),
+	defaultEndTime : moment().endOf('day').toDate()
 }
 </pre>
 			</div>
@@ -132,7 +132,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	language:'cn'
+	language : 'cn'
 }
 </pre>
 			</div>
@@ -141,7 +141,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	language:'en'
+	language : 'en'
 }				
 </pre>
 			</div>
@@ -150,7 +150,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	language: 'custom'
+	language : 'custom'
 }			
 </pre>
 			</div>
@@ -159,17 +159,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate: '2014-11-20'
-}				
-</pre>
-			</div>
-			<div class="demo">
-				Limit date range selected between 3 days to 7 days: <input id="date-range5-2" size="40" value="">
-				<a href="#" class="show-option">Show Config</a>
-<pre class="options">
-{
-	maxDays: 7,
-	minDays: 3
+	startDate : '2014-11-20'
 }				
 </pre>
 			</div>
@@ -178,8 +168,8 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate: '2013-01-10',
-	endDate: '2013-02-10'
+	startDate : '2013-01-10',
+	endDate : '2013-02-10'
 }				
 </pre>
 			</div>
@@ -188,8 +178,8 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	minDays: 3,
-	maxDays: 7
+	minDays : 3,
+	maxDays : 7
 }			
 </pre>
 			</div>
@@ -198,7 +188,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startOfWeek: 'monday'
+	startOfWeek : 'monday'
 }			
 </pre>
 			</div>
@@ -210,11 +200,11 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	getValue: function()
+	getValue : function()
 	{
 		return this.innerHTML;
 	},
-	setValue: function(s)
+	setValue : function(s)
 	{
 		this.innerHTML = s;
 	}
@@ -230,14 +220,14 @@
 <pre class="options">
 {
 	separator : ' to ',
-	getValue: function()
+	getValue : function()
 	{
 		if ($('#date-range200').val() && $('#date-range201').val() )
 			return $('#date-range200').val() + ' to ' + $('#date-range201').val();
 		else
 			return '';
 	},
-	setValue: function(s,s1,s2)
+	setValue : function(s,s1,s2)
 	{
 		$('#date-range200').val(s1);
 		$('#date-range201').val(s2);
@@ -250,7 +240,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	format: 'dddd MMM Do, YYYY'  //more formats at http://momentjs.com/docs/#/displaying/format/
+	format : 'dddd MMM Do, YYYY'  //more formats at http://momentjs.com/docs/#/displaying/format/
 }				
 </pre>
 			</div>
@@ -259,11 +249,11 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts: true,
+	showShortcuts : true,
 	shortcuts :
 	{
-		'next-days': [3,5,7],
-		'next': ['week','month','year']
+		'next-days' : [3,5,7],
+		'next' : ['week','month','year']
 	}
 }				
 </pre>
@@ -273,11 +263,11 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts: true,
+	showShortcuts : true,
 	shortcuts :
 	{
-		'prev-days': [3,5,7],
-		'prev': ['week','month','year'],
+		'prev-days' : [3,5,7],
+		'prev' : ['week','month','year'],
 	}
 }				
 </pre>
@@ -287,10 +277,10 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts: true,
+	showShortcuts : true,
 	shortcuts : null,
-	startOfWeek: 'sunday',
-	language:'en',
+	startOfWeek : 'sunday',
+	language : 'en',
 	customShortcuts:
 	[
 		//if return an array of two dates, it will select the date range between the two dates
@@ -323,10 +313,10 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	language:'en',
-	customValueLabel: 'Dynamic Ranges',
-	showCustomValues: true,
-	customValues:
+	language : 'en',
+	customValueLabel : 'Dynamic Ranges',
+	showCustomValues : true,
+	customValues :
 		//if return an array of two dates, it will select the date range between the two dates
 		[
 			{
@@ -346,7 +336,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	autoClose: true
+	autoClose : true
 }				
 </pre>
 			</div>
@@ -355,9 +345,10 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	inline:true,
-	container: '#date-range12-container',
-	alwaysOpen:true
+	inline : true,
+	container : '#date-range12-container',
+	alwaysOpen : true
+	autoClose : true
 }				
 </pre>
 				<div id="date-range12-container" style="width:456px;"></div>
@@ -367,9 +358,9 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	autoClose: false,
+	autoClose : false,
 	singleDate : true,
-	showShortcuts: false
+	showShortcuts : false
 }				
 </pre>
 			</div>
@@ -378,10 +369,10 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	autoClose: true,
+	autoClose : true,
 	singleDate : true,
-	showShortcuts: false,
-	singleMonth: true
+	showShortcuts : false,
+	singleMonth : true
 }				
 </pre>
 			</div>
@@ -390,8 +381,8 @@
 				 <a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	batchMode: 'week',
-	showShortcuts: false
+	batchMode : 'week',
+	showShortcuts : false
 }				
 </pre>
 			</div>
@@ -400,8 +391,8 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	batchMode: 'week-range',
-	showShortcuts: false
+	batchMode : 'week-range',
+	showShortcuts : false
 }				
 </pre>
     </div>
@@ -410,8 +401,8 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts: false,
-	beforeShowDay: function(t)
+	showShortcuts : false,
+	beforeShowDay : function(t)
 	{
 		var valid = !(t.getDay() == 0 || t.getDay() == 6);  //disable saturday and sunday
 		var _class = '';
@@ -438,8 +429,8 @@
 <pre class="options">
 $('#date-range16').dateRangePicker(
 {
-	showShortcuts: false,
-	format: 'YYYY-MM-DD'
+	showShortcuts : false,
+	format : 'YYYY-MM-DD'
 }).bind('datepicker-change', function(evt, obj) {
 	alert('date1: ' + obj.date1 + ' / date2: ' + obj.date2);
 });
@@ -485,9 +476,9 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	stickyMonths: true,
-	startDate: '2013-01-10',
-	endDate: '2013-05-10'
+	stickyMonths : true,
+	startDate : '2013-01-10',
+	endDate : '2013-05-10'
 }				
 </pre>
 			</div>
@@ -496,7 +487,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	customTopBar: 'Foo Bar'
+	customTopBar : 'Foo Bar'
 }
 </pre>
 			</div>
@@ -504,11 +495,13 @@ $('#date-range16-reset').click(function(evt)
 				Different class names of first and second selected dates: <input id="date-range19" size="60" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
-{
-	extraClass: 'date-range-picker19'
-}
+&lt;style>
 .date-picker-wrapper.date-range-picker19 .day.first-date-selected { background-color: red !important; }
 .date-picker-wrapper.date-range-picker19 .day.last-date-selected { background-color: orange !important; }
+&lt;/style>
+{
+	extraClass : 'date-range-picker19'
+}
 </pre>
 			</div>
 			<div class="demo">
@@ -516,7 +509,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	hoveringTooltip: false
+	hoveringTooltip : false
 }
 </pre>
 			</div>
@@ -525,7 +518,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	hoveringTooltip: function(days)
+	hoveringTooltip : function(days)
 	{
 		var D = ['One','Two', 'Three','Four','Five'];
 		return D[days] ? D[days] : days;
@@ -538,7 +531,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showDateFilter: function(time, date)
+	showDateFilter : function(time, date)
 	{
 		return '&lt;div style="padding:0 5px;">\
 					&lt;span style="font-weight:bold">'+date+'&lt;/span>\
@@ -553,9 +546,9 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	singleMonth: true,
-	showShortcuts: false,
-	showTopbar: false
+	singleMonth : true,
+	showShortcuts : false,
+	showTopbar : false
 }
 </pre>
 			</div>
@@ -564,7 +557,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showWeekNumbers: true
+	showWeekNumbers : true
 }
 </pre>
 			</div>
@@ -573,8 +566,8 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showWeekNumbers: true,
-	startOfWeek: 'monday'
+	showWeekNumbers : true,
+	startOfWeek : 'monday'
 }
 </pre>
 			</div>
@@ -583,8 +576,8 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showWeekNumbers: true,
-	getWeekNumber: function(day)
+	showWeekNumbers : true,
+	getWeekNumber : function(day)
 	{
 		var fiscalYearStart = moment('2015-08-16','YYYY-MM-DD');
 		var daysOffset = parseInt(fiscalYearStart.format('DDD'),10);
@@ -598,7 +591,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	selectForward: true
+	selectForward : true
 }
 </pre>
 			</div>
@@ -607,7 +600,7 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	selectBackward: true
+	selectBackward : true
 }
 </pre>
 			</div>
@@ -616,16 +609,16 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate: new Date(),
-	selectForward: true,
-	showDateFilter: function(time, date)
+	startDate : new Date(),
+	selectForward : true,
+	showDateFilter : function(time, date)
 	{
-		return '&lt;div style="padding:0 5px;">\
-					&lt;span style="font-weight:bold">'+date+'&lt;/span>\
-					&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>\
-				&lt;/div>';
+		return '&lt;div style="padding:0 5px;">'+
+		'&lt;span style="font-weight:bold">'+date+'&lt;/span>'
+		'&lt;div style="opacity:0.3;">$'+Math.round(Math.random()*999)+'&lt;/div>'
+		'&lt;/div>';
 	},
-	beforeShowDay: function(t)
+	beforeShowDay : function(t)
 	{
 		var valid = !(t.getDay() == 0 || t.getDay() == 6);  //disable saturday and sunday
 		var _class = '';
@@ -640,11 +633,11 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	customOpenAnimation: function(cb)
+	customOpenAnimation : function(cb)
 	{
 		$(this).fadeIn(300, cb);
 	},
-	customCloseAnimation: function(cb)
+	customCloseAnimation : function(cb)
 	{
 		$(this).fadeOut(300, cb);
 	}
@@ -657,8 +650,8 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 // To make this demo work completely, the FontAwesome stylesheets are required 				
 {		
-    customArrowPrevSymbol: '&lt;i class="fa fa-arrow-circle-left"&gt;&lt;/i&gt;',
-    customArrowNextSymbol: '&lt;i class="fa fa-arrow-circle-right"&gt;&lt;/i&gt;'
+    customArrowPrevSymbol : '&lt;i class="fa fa-arrow-circle-left">&lt;/i>',
+    customArrowNextSymbol : '&lt;i class="fa fa-arrow-circle-right">&lt;/i>'
 }
 </pre>
 			</div>
@@ -670,60 +663,60 @@ $('#date-range16-reset').click(function(evt)
 				The default configuration object is:<br>
 <pre>
 {
-	autoClose: false,
-	format: 'YYYY-MM-DD',
-	separator: ' to ',
-	language: 'auto',
-	startOfWeek: 'sunday',// or monday
-	getValue: function()
+	autoClose : false,
+	format : 'YYYY-MM-DD',
+	separator : ' to ',
+	language : 'auto',
+	startOfWeek : 'sunday',// or monday
+	getValue : function()
 	{
 		return $(this).val();
 	},
-	setValue: function(s)
+	setValue : function(s)
 	{
 		if(!$(this).attr('readonly') && !$(this).is(':disabled') && s != $(this).val())
 		{
 			$(this).val(s);
 		}
 	},
-	startDate: false,
-	endDate: false,
-	time: {
+	startDate : false,
+	endDate : false,
+	time : {
 		enabled: false
 	},
-	minDays: 0,
-	maxDays: 0,
-	showShortcuts: false,
+	minDays : 0,
+	maxDays : 0,
+	showShortcuts : false,
 	shortcuts:
 	{
-		//'prev-days': [1,3,5,7],
-		//'next-days': [3,5,7],
+		//'prev-days' : [1,3,5,7],
+		//'next-days' : [3,5,7],
 		//'prev' : ['week','month','year'],
 		//'next' : ['week','month','year']
 	},
 	customShortcuts : [],
-	inline:false,
-	container:'body',
-	alwaysOpen:false,
-	singleDate:false,
-	lookBehind: false,
-	batchMode: false,
-	duration: 200,
-	stickyMonths: false,
-	dayDivAttrs: [],
-	dayTdAttrs: [],
-	applyBtnClass: '',
-	singleMonth: 'auto',
-	hoveringTooltip: function(days, startTime, hoveringTime)
+	inline : false,
+	container : 'body',
+	alwaysOpen : false,
+	singleDate : false,
+	lookBehind : false,
+	batchMode : false,
+	duration : 200,
+	stickyMonths : false,
+	dayDivAttrs : [],
+	dayTdAttrs : [],
+	applyBtnClass : '',
+	singleMonth : 'auto',
+	hoveringTooltip : function(days, startTime, hoveringTime)
 	{
 		return days > 1 ? days + ' ' + lang('days') : '';
 	},
-	showTopbar: true,
-	swapTime: false,
-	selectForward: false,
-	selectBackward: false,
-	showWeekNumbers: false,
-	getWeekNumber: function(date) //date will be the first day of a week
+	showTopbar : true,
+	swapTime : false,
+	selectForward : false,
+	selectBackward : false,
+	showWeekNumbers : false,
+	getWeekNumber : function(date) //date will be the first day of a week
 	{
 		return moment(date).format('w');
 	}
