--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment-with-locales.min.js" type="text/javascript"></script>
 		<script src="src/jquery.daterangepicker.js"></script>
+		<script src="src/jquery.daterangepicker.lang.js"></script>
 		<script src="demo.js"></script>
 		<style type="text/css">
 		#wrapper
@@ -115,30 +116,26 @@
 </pre>
 			</div>
 			<div class="demo">
-				Use custom language: <input id="date-range4-1" size="40" value="">
-				<a href="#" class="show-option">Show Config</a>
-<pre class="options">
-{
-	language : 'custom'
-}			
-</pre>
-			</div>
-			<div class="demo">
 				Select a date range after 2014-11-20: <input id="date-range5" size="40" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate : '2014-11-20'
+	dateRange : {
+		start : '2014-11-20'
+	}
 }				
 </pre>
 			</div>
 			<div class="demo">
-				Select a date range between 2013-01-10 to 2013-02-10: <input id="date-range6" size="40" value="">
+				Select a date range between 2013-01-10 to 2013-03-10: <input id="date-range6" size="40" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate : '2013-01-10',
-	endDate : '2013-02-10'
+	dateRange : {
+		start : '2013-01-10',
+		end : '2013-03-10'
+	}
+
 }				
 </pre>
 			</div>
@@ -218,7 +215,6 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts : true,
 	shortcuts :
 	{
 		'next-days' : [3,5,7],
@@ -232,11 +228,10 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts : true,
 	shortcuts :
 	{
 		'prev-days' : [3,5,7],
-		'prev' : ['week','month','year'],
+		'prev' : ['week','month','year']
 	}
 }				
 </pre>
@@ -246,57 +241,20 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts : true,
-	shortcuts : null,
-	startOfWeek : 'sunday',
-	language : 'en',
-	customShortcuts:
-	[
-		//if return an array of two dates, it will select the date range between the two dates
-		{
-			name: 'this week',
-			dates : function()
-			{
-				var start = moment().day(0).toDate();
-				var end = moment().day(6).toDate();
-				return [start,end];
-			}
-		},
-		//if only return an array of one date, it will display the month which containing the date.
-		//will not select any date range
-		{
-			name: 'Oct 2014',
-			dates : function()
-			{
+	shortcuts : {
+		custom : {
+			'this week' : function (daytime) {
+				var start = daytime.day(0).toDate();
+				var end = daytime.clone().day(6).toDate();
+				return [start, end];
+			},
+			'Oct 2014' : function (daytime) {
 				//move calendars to show this date's month and next month
-				var movetodate = moment('2014-10','YYYY-MM').toDate();
+				var movetodate = moment('2014-10', 'YYYY-MM').toDate();
 				return [movetodate];
 			}
 		}
-	]
-}				
-</pre>
-			</div>
-			<div class="demo">
-				Use custom values: <input id="date-range105" size="60" value="">
-				<a href="#" class="show-option">Show Config</a>
-<pre class="options">
-{
-	language : 'en',
-	customValueLabel : 'Dynamic Ranges',
-	showCustomValues : true,
-	customValues :
-		//if return an array of two dates, it will select the date range between the two dates
-		[
-			{
-				name: 'MTD',
-				value: 'Month To Date'
-			},
-			{
-				name: 'YTD',
-				value: 'Year To Date'
-			}
-		]
+	}
 }				
 </pre>
 			</div>
@@ -322,13 +280,11 @@
 				<div id="date-range12-container"></div>
 			</div>
 			<div class="demo">
-				Single Date mode: <input id="date-range13" size="40" value="2015-03-01">
+				Single Date mode: <input id="date-range13" size="40" value="">
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	autoClose : false,
-	singleDate : true,
-	showShortcuts : false
+	singleDate : true
 }				
 </pre>
 			</div>
@@ -339,7 +295,6 @@
 {
 	autoClose : true,
 	singleDate : true,
-	showShortcuts : false,
 	singleMonth : true
 }				
 </pre>
@@ -349,8 +304,7 @@
 				 <a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	batchMode : 'week',
-	showShortcuts : false
+	batchMode : 'week'
 }				
 </pre>
 			</div>
@@ -359,8 +313,7 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	batchMode : 'week-range',
-	showShortcuts : false
+	batchMode : 'week-range'
 }				
 </pre>
     </div>
@@ -369,7 +322,6 @@
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	showShortcuts : false,
 	beforeShowDay : function(t)
 	{
 		var valid = !(t.getDay() == 0 || t.getDay() == 6);  //disable saturday and sunday
@@ -397,7 +349,6 @@
 <pre class="options">
 $('#date-range16').dateRangePicker(
 {
-	showShortcuts : false,
 	format : 'YYYY-MM-DD'
 }).bind('DRPick-change', function(evt, obj) {
 	alert('date1: ' + obj.date1 + ' / date2: ' + obj.date2);
@@ -445,8 +396,10 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 {
 	stickyMonths : true,
-	startDate : '2013-01-10',
-	endDate : '2013-05-10'
+	dateRange : {
+		start : '2013-01-10',
+		end : '2013-05-10'
+	}
 }				
 </pre>
 			</div>
@@ -456,19 +409,6 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 {
 	customTopBar : 'Foo Bar'
-}
-</pre>
-			</div>
-			<div class="demo">
-				Different class names of first and second selected dates: <input id="date-range19" size="60" value="">
-				<a href="#" class="show-option">Show Config</a>
-<pre class="options">
-&lt;style>
-.date-picker-wrapper.date-range-picker19 .day.first-date-selected { background-color: red !important; }
-.date-picker-wrapper.date-range-picker19 .day.last-date-selected { background-color: orange !important; }
-&lt;/style>
-{
-	extraClass : 'date-range-picker19'
 }
 </pre>
 			</div>
@@ -515,7 +455,6 @@ $('#date-range16-reset').click(function(evt)
 <pre class="options">
 {
 	singleMonth : true,
-	showShortcuts : false,
 	showTopbar : false
 }
 </pre>
@@ -577,7 +516,9 @@ $('#date-range16-reset').click(function(evt)
 				<a href="#" class="show-option">Show Config</a>
 <pre class="options">
 {
-	startDate : new Date(),
+	dateRange : {
+		start : new Date()
+	},
 	selectForward : true,
 	showDateFilter : function(time, date)
 	{
@@ -643,24 +584,24 @@ $('#date-range16-reset').click(function(evt)
 	},
 	setValue : function(s)
 	{
-		if(!$(this).attr('readonly') && !$(this).is(':disabled') && s != $(this).val())
-		{
-			$(this).val(s);
+		if (s != $(this).val()) {
+			$(this).val(s).change();
 		}
 	},
-	startDate : false,
-	endDate : false,
+	dateRange : {
+		start : false,
+		end : false
+	},
 	minDays : 0,
 	maxDays : 0,
-	showShortcuts : false,
 	shortcuts:
 	{
 		//'prev-days' : [1,3,5,7],
 		//'next-days' : [3,5,7],
 		//'prev' : ['week','month','year'],
-		//'next' : ['week','month','year']
+		//'next' : ['week','month','year'],
+		//'custom' : { 'name': function(daytime){} }
 	},
-	customShortcuts : [],
 	container : undefined,
 	alwaysOpen : false,
 	dropTrigger : true,
@@ -669,8 +610,6 @@ $('#date-range16-reset').click(function(evt)
 	batchMode : false,
 	duration : 200,
 	stickyMonths : false,
-	dayDivAttrs : [],
-	dayTdAttrs : [],
 	applyBtnClass : '',
 	singleMonth : 'auto',
 	hoveringTooltip : function(days, startTime, hoveringTime)
@@ -706,9 +645,9 @@ $('#date-range16-reset').click(function(evt)
 	When it is called, the context of this function is set to the datepicker DOM</i>
 <b>setValue (Function)</b>
 	<i>This function is called when set date range string to DOM</i>
-<b>startDate (String or false)</b>
+<b>dateRange.start (String, Date or false)</b>
 	<i>This string defines the earliest date which is allowed for the user, same format as `format`</i>
-<b>endDate (String or false)</b>
+<b>dateRange.end (String, Date or false)</b>
 	<i>This string defines the latest date which is allowed for the user, same format as `format`</i>
 <b>minDays (Number)</b>
 	<i>This number defines the minimum days of the selected range
@@ -716,12 +655,8 @@ $('#date-range16-reset').click(function(evt)
 <b>maxDays (Number)</b>
 	<i>This number defines the maximum days of the selected range
 	if this is 0, means do not limit maximum days</i>
-<b>showShortcuts (Boolean)</b>
-	<i>hide or show shortcuts area</i>
 <b>shortcuts (Object)</b>
 	<i>define the shortcuts buttons. there are some built in shortcuts, see source code</i>
-<b>customShortcuts (Array)</b>
-	<i>define custom shortcut buttons. see demo.js</i>
 <b>inline (Boolean)</b>
 	<i>whether to render the date range picker dom in inline mode instead of overlay mode,
 	if set to true, please set `container` too</i>
@@ -735,9 +670,9 @@ $('#date-range16-reset').click(function(evt)
 	<i>choose a single date instead of a date range. If `singleMonth` option is set to true it will show
 	only one month instead of two months.
 	</i>
-<b>batchMode (false / 'week' / 'month')</b>
+<b>batchMode (false or string)</b>
 	<i> auto batch select mode </i>
-	<i> false (default), week, month, week-range, month-range</i>
+	<i> false (default), week, weekdays, weekends, month, week-range, month-range</i>
 <b>beforeShowDay (Function)</b>
 	<i>A function that takes a date as a parameter and must return an array with:
 	[0]: true/false indicating whether or not this date is selectable
@@ -747,17 +682,14 @@ $('#date-range16-reset').click(function(evt)
 <b>stickyMonths (Boolean)</b>
 	<i>If true, there will only be one previous and one next button. Clicking them will change
 	both the months. This setting will have no effect if singleDate option is set to true</i>
-<b>singleMonth (Boolean || 'auto') Default value: 'auto'</b>
+<b>singleMonth (Boolean) Default value: false</b>
 	<i>If true, it will show only one month instead of two months. You can select date range
-	in the one month view. If this is set to 'auto', it will be changed to true if the screen width
-	is lower than 480.</i>
+	in the one month view.</i>
 <b>showDateFilter ( Function(Int time, Int date) )</b>
 	<i>This is a callback function when creating each date element in the calendar. First paramter will
 	be the timestamp of that day. Second parameter will be the date of that month.</i>
 <b>customTopBar ( Function || String)</b>
 	<i>If you set this parameter, it will use this value in the top bar.</i>
-<b>extraClass (String)</b>
-	<i>Set extra class name to the date range picker dom.</i>
 <b>customArrowPrevSymbol (String / String HTML)</b>
 	<i>Set custom previous symbol, you can use html snippet too.</i>
 <b>customArrowNextSymbol (String / String HTML)</b>
