--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 		<link rel="stylesheet" type="text/css" href="src/daterangepicker.css" />
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment-with-locales.min.js" type="text/javascript"></script>
-		<script src="src/jquery.daterangepicker.js"></script>
-		<script src="src/jquery.daterangepicker.lang.js"></script>
-		<script src="demo.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="src/jquery.daterangepicker.js"></script>
+		<script type="text/javascript" src="src/jquery.daterangepicker.lang.js"></script>
 		<style type="text/css">
 		#wrapper
 		{
@@ -40,7 +39,7 @@
 	<body>
 		<div id="wrapper">
 			<div style="margin-bottom:1em"><h1 style="display:inline">jQuery Date Range Picker<h4 style="display:inline">
-				<a href="https://github.com/Adam5Wu/jquery-date-range-picker">[Repository]</a>
+				<a href="https://github.com/Adam5Wu/DateRange-Picker-Ex">[Repository]</a>
 			</h4></h1></div>
 			<p>
 				jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.
@@ -70,12 +69,13 @@
 			<p>
             <h2 id="installation">Installation</h2>
 <pre>
-&lt;link rel="stylesheet" href="dist/daterangepicker.min.css">
+&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.min.css">
 &lt;!-- Optional "Slate" color theme -->
-&lt;link rel="stylesheet" href="dist/daterangepicker.slate.delta.min.css">
+&lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.slate.delta.min.css">
 &lt;script type="text/javascript" src="moment.min.js">&lt;/script>
 &lt;script type="text/javascript" src="jquery.min.js">&lt;/script>
 &lt;script type="text/javascript" src="dist/jquery.daterangepicker.min.js">&lt;/script>
+&lt;script type="text/javascript" src="dist/jquery.daterangepicker.lang.min.js">&lt;/script>
 </pre>
             <h2 id="demonstrations">Demonstrations</h2>
 			<div class="demo">
@@ -664,12 +664,10 @@ $('#date-range16-reset').click(function(evt)
 	<i>where should the date range picker dom should be renderred to</i>
 <b>alwaysOpen (Boolean)</b>
 	<i>if you use inline mode, you may want the date range picker widget to be renderred when the page loads
-	set this to true will also hide the "close" button
-	</i>
+	set this to true will also hide the "close" button</i>
 <b>singleDate (Boolean)</b>
 	<i>choose a single date instead of a date range. If `singleMonth` option is set to true it will show
-	only one month instead of two months.
-	</i>
+	only one month instead of two months.</i>
 <b>batchMode (false or string)</b>
 	<i> auto batch select mode </i>
 	<i> false (default), week, weekdays, weekends, month, week-range, month-range</i>
@@ -705,8 +703,8 @@ $('#date-range16-reset').click(function(evt)
 <b>getWeekNumber (Function( Date object ) )</b>
 	<i>the function called to generate the week number. the first parameter will be the first day of a week</i>
 </pre>
-	<h2>Events</h2>
-	<p>events will be triggerred on the date range picker DOM</p>
+			<h2>Events</h2>
+			<p>events will be triggerred on the date range picker DOM</p>
 <pre>
 $('#dom-id')
 .dateRangePicker()
@@ -756,9 +754,7 @@ $('#dom-id')
 	console.log('after open');
 })
 </pre>
-<br>
-	<h2>APIs</h2>
-	<p></p>
+			<h2>APIs</h2>
 <pre>
 //after you called  $(dom).dateRangePicker();
 $(dom).data('DRPick')
@@ -776,20 +772,18 @@ $(dom).data('DRPick')
 	.resetMonthsView();	// reset to default months
 	.destroy();		// destroy all date range picker related things
 </pre>
-	<h2>License</h2>
-<pre>
-This date range picker plugin is under MIT LICENSE
-</pre>
-	<script>
-	$(function()
+		</div>
+
+<script>
+$(function()
+{
+	$('a.show-option').click(function(evt)
 	{
-		$('a.show-option').click(function(evt)
-		{
-			evt.preventDefault();
-			$(this).siblings('.options').slideToggle();
-		});
-	})
-	</script>
-     </div>
+		evt.preventDefault();
+		$(this).siblings('.options').slideToggle();
+	});
+})
+</script>
+<script type="text/javascript" src="demo.js"></script>
 	</body>
 </html>
