Minor code style and transation improvements

--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@ $('#date-range16-reset').click(function(evt)
 				The default configuration object is:<br>
 <pre>
 {
+	autoStart : false,
 	autoClose : false,
 	watchValueChange: true,
 	format : 'YYYY-MM-DD',
