Update demo page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1">
-		<title>Date Picker Demo</title>
+		<title>DateRange-Picker-Ex Demo</title>
 		<!--link rel="stylesheet" type="text/css" href="https://bootswatch.com/slate/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="src/daterangepicker.slate.css" /-->
 		<link rel="stylesheet" type="text/css" href="src/daterangepicker.css" />
@@ -43,11 +43,11 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<div style="margin-bottom:1em"><h1 style="display:inline">jQuery Date Range Picker<h4 style="display:inline">
+			<div style="margin-bottom:1em"><h1 style="display:inline">DateRange-Picker-Ex<h4 style="display:inline">
 				<a href="https://github.com/Adam5Wu/DateRange-Picker-Ex">[Repository]</a>
 			</h4></h1></div>
 			<p>
-				jQuery Date Range Picker is a jQuery plugin that allows user to select a date range. <br>
+				DateRange-Picker-Ex is a jQuery plugin that allows user to select a date range. <br>
 			</p>
 			<p>
 				Requires
