--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			</ul>
 			<p>
 				Supports multi-language, you can choose a pre-defined language or set it to auto-detect mode. <br>
-				You can also define new languages for it.
+				You can also define new languages, refer to <a href="src/daterangepicker.lang.js">the translations module</a> for example.
 			</p>
 			<p>
 				Easily customizeable colors and style to adopt to arbitrary theme. <br>
