Update readme and demo page

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
 				Easily customizeable colors and style to adopt to arbitrary theme. <br>
 				Refer to <a href="src/daterangepicker.slate.delta.css">the "Slate" delta CSS</a> for example.
 			</p>
-			<span style="padding:0.5em;border:1px solid grey;border-radius:1em">
+			<p><span style="padding:0.5em;border:1px solid grey;border-radius:1em">
 				Interested in interactive time entry? Checkout <a href="https://adam5wu.github.io/TimeDropper-Ex/">TimeDropper-Ex</a>.
-			</span>
+			</span></p>
+			<p><span style="padding:0.5em;border:1px solid grey;border-radius:1em">
+				Interested in comprehensive datetime range entry? Checkout <a href="https://adam5wu.github.io/DateTimeRanger/">DateTimeRanger</a>.
+			</span></p>
             <h2 id="installation">Installation</h2>
 <pre>
 &lt;link rel="stylesheet" type="text/css" href="dist/daterangepicker.min.css" />
